# AGi

./: .gitignore  CHANGELOG.md  CLAUDE.md  Phase 1 - M1.html  README.md  VCS.md  cns_node.py  config.py  grace_memory.db  igniter.py  pyproject.toml  test_chatbot.py
.github/: pull_request_template.md
AGi_core/: setup.py
AIVA/: .gitignore  agi.html  config.json5  package.xml  pyproject.toml  setup.py
AIVA/src/vcs/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
AIVA/src/vcs/launch/: vcs.launch.py
AIVA/src/vcs/vcs/: vcb.py  vcc.py  vcc_oscillator.py  vcc_vp_analyzer.py  vital_core.py  vp_analyzer.py
AIVA/vp/: CHANGELOG.rst  CMakeLists.txt  package.xml
AIVA/vp/msg/: VitalPulse.msg
AuRoRA/: .gitignore  AGi.html  CLAUDE.md  README.md  agi.html  config.json5  cosmos.sh  launch.sh  pyproject.toml  requirements.txt  start_igniter.sh
AuRoRA/archive/scs/: ascii_art.py  blog.py  comms.py  eee.py  grace_architecture.html  igniter.py  igniter_temp.py  rlhf_llm.py  smc.py  test_blog.py  train_llm.py
AuRoRA/journal/: AGi - Project Charter.md  Coding Journey - P1M1.md
AuRoRA/src/hrs/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
AuRoRA/src/hrs/hrs/: hrp.py
AuRoRA/src/scs/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
AuRoRA/src/scs/config/: robot_spec.yaml
AuRoRA/src/scs/scs/: AGi.html  CHANGELOG.rst  alter-ego.md  app.js  cli.py  cnc.py  cns_debugger.py  cns_node.py  config.py  eee.py  eee_ros_bridge.py  emc.py  flask_server.py  gcc.py  igniter.py  igniter_temp.py  index.html  llm.py  mcc.py  memory.py  msb.py  package.xml  reports.py  rl-rewards.js  rlhf_llm.py  robot.js  sdv.py  search.py  setup.py  simple_sqlite_rag.py  styles.css  wmc.py
AuRoRA/src/scs/scs/css/: background.css  robot.css
AuRoRA/src/scs/scs/js/: chat-handler.js  main.js
AuRoRA/src/scs/scs/new/: cnc.py  emc.py  mcc.py
AuRoRA/src/vcs/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
AuRoRA/src/vcs/config/: robot_spec.yaml
AuRoRA/src/vcs/launch/: vcs.launch.py
AuRoRA/src/vcs/vcs/: pump.py  vp_generator.py  vp_regulator.py  vtc.py  vtc_oscillator.py  vtc_vp_generator.py
AuRoRA/src/vp/: CHANGELOG.rst  CMakeLists.txt  package.xml
AuRoRA/src/vp/msg/: VitalPulse.msg
AuRoRA/src/vsm/vsm/: heartbeat.py
AuRoRA/test/: jetson_stats.md  jtop_cpu.py  jtop_properties.py  read_ledger_db.py  scc.py  test_errorlog.py
AuRoRA/tests/: grace_cli.py  grace_ui.py  migrate_emc_schema.py  session_diff.sh  test_sqlite_vec.py
core/: main.py  pyproject.toml
docs/: AGi-ROS_Documentation.md  AGi-ROS_Paper.tex  VCS.md  talle.html  talli-eee.html
flask_server/: AGi.html  flask_server.py
install/: local_setup.sh  setup.sh
log/: latest_build
rlhf_data/: feedback.jsonl  stats.json  training_pairs.jsonl
robot/: pyproject.toml
searxng-mcp-server/: package-lock.json  searxng-mcp-server.js
(+52 files in other folders)
